fixed vertical alignment, minor style issues

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -21,7 +21,7 @@
 
     .nav
         background #ff4d4d
-        height 80px
+        height 125px
         text-align center
 
     .subtitle
@@ -31,17 +31,21 @@
         display inline-block
 
     a
+        color #ff4d4d
         margin 5px 2.5px 5px 2.5px
+        padding-top 45px
         display inline-block
-        padding 25px
+        height 115 px;
+        width 115 px;
+        //make it so text doesn't appear or something unless you hover over
         //background url(http://content.sportslogos.net/logos/34/854/full/4803_stanford_cardinal-primary-2014.pn://media.glassdoor.com/sqll/2989/stanford-university-squarelogo-1431968559974.png)
         //background-position center
         background-color #fff
-        text decoration none
+        text-decoration none
 
         &:hover
             background-color #ff4d4d
-            text-decoration underline
+            color #fff
 
      .main-content
         margin 50px auto
